--- a/src/main/resources/templates/docker/docker.html
+++ b/src/main/resources/templates/docker/docker.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link th:href="@{/bootstrap-icons-1.9.1/bootstrap-icons.css}" rel="stylesheet" type="text/css">
-    
+
     <link rel="stylesheet" th:href="@{/css/bootstrap/bootstrap.min.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/menu.css}" type="text/css">
 
@@ -33,7 +33,8 @@
 </head>
 
 <body id="body-pd">
-    <div th:insert="components/menuTamplate :: menuTamplate(tela='docker')"></div><!--MENU-->
+    <div th:insert="components/menuTamplate :: menuTamplate(tela='docker')"></div>
+    <!--MENU-->
     <div class="ms-5" id="page-content-wrapper">
         <!--BODY da página-->
         <div class="row">
@@ -41,19 +42,8 @@
             <div class="row">
                 <div class="col mt-4 py-2 pt-3 px-3  rounded-4 shadow lightMode">
                     <div class="row text-end">
-                        <div class="col-auto text-start">
+                        <div class="col text-start">
                             <h3 id="title">Nome do Container Docker</h2>
-                        </div>
-                        <div class="col text-start" style="color: rgb(21, 255, 0);">
-                            <h3 id="status">OK</h3>
-                        </div>
-
-                        <div class="col-auto">
-                            <h3 id="user">Usuário</h3>
-                        </div>
-
-                        <div class="col-auto">
-                            <h3 id="user">dd/mm/yyyy hh:MM</h3>
                         </div>
                         <div class="col-auto">
                             <button class="btn btn-primary" id="btnSave">Salvar</button>
