🐛 Tema escuro arrumado

--- a/src/main/resources/templates/components/menuTamplate.html
+++ b/src/main/resources/templates/components/menuTamplate.html
@@ -86,7 +86,7 @@
             </nav>
         </div>
 
-        <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
+        <!--<script th:src="@{/js/cookies.js}" type="text/javascript"></script>-->
     </div>
 
 </body>
