--- a/src/main/resources/templates/forms/gerenciarFormularios.html
+++ b/src/main/resources/templates/forms/gerenciarFormularios.html
@@ -59,11 +59,12 @@
                                 </tr>
 
                             </table>
+                            <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
                         </div>
                     </div>
             </div>
         </div>
-        <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
+    </div>
 </body>
 
 </html>
