--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -248,12 +248,14 @@ a {
     z-index: 2;
 }
 
+
 #loader {
+    text-align: center;
     position: fixed;
     margin: 0%;
     padding: 0%;
     width: 100%;
     height: 100vh;
-    background: #fff url('src/main/resources/static/assets/load.gif') no-repeat center;
+    background: #fff;
     z-index: 999;
 }
