--- a/src/main/resources/templates/forms/formulario.html
+++ b/src/main/resources/templates/forms/formulario.html
@@ -30,7 +30,7 @@
 </head>
 
 <body id="body-pd">
-    <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
+    <div th:insert="components/menuTamplate :: menuTamplate(tela='formularios')"></div>
     <div id="page-content-wrapper">
         <!--BODY da página-->
         <div class="m-4 pt-4">
